Bug 112680 - Color picker dialog opens with incorrect custom color
Summary: Color picker dialog opens with incorrect custom color
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
4.4.7.2 release
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.0.0 target:5.4.3
Keywords:
Depends on:
Blocks: Color-Picker-Widget Color-Picker-Dialog
  Show dependency treegraph
 
Reported: 2017-09-27 00:04 UTC by Yousuf Philips (jay) (retired)
Modified: 2022-06-18 05:15 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Yousuf Philips (jay) (retired) 2017-09-27 00:04:51 UTC
steps:
1. open attachment 98016 [details]
2. click on the second line which has the text 'Dynamics AX 2012'
3. open character dialog
4. switch to font effects tab
5. notice font color is set to #008080
6. open color picker widget and click 'custom color' button
7. dialog opens with color set to #ffffff

regression since 5.3 when color picker widget was introduced into dialogs.

Version: 6.0.0.0.alpha0+
Build ID: 7315f325ff7ada3d6bd85a471058fdaeaff8cdb0
CPU threads: 2; OS: Linux 4.4; UI render: default; VCL: gtk2; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2017-09-17_06:58:21
Locale: en-US (en_US.UTF-8); Calc: group
Comment 1 Maxim Monastirsky 2017-09-27 07:10:10 UTC
Confirmed, but I don't understand why you call it a regression, given that it was not possible to open the color picker from inside the character dialog before 5.3.
Comment 2 Yousuf Philips (jay) (retired) 2017-09-27 09:23:03 UTC
regression keyword removed. it is also broken when you go to the toolbar font color widget and click the 'custom color' button since 4.4 when the widget was introduced in the toolbar.
Comment 3 Commit Notification 2017-09-28 19:21:45 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6ddd8fcf5c92936de2a3f9d824b06a9f7dc5a86a

Resolves: tdf#112680 start color picker with currently selected color

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Caolán McNamara 2017-09-28 19:22:57 UTC
backport to 5-4 in gerrit
Comment 5 Yousuf Philips (jay) (retired) 2017-09-29 03:23:56 UTC
Thanks Caolan.
Comment 6 Commit Notification 2017-10-03 15:18:29 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c2ebe20adedf74632927e2a2efb7652837ef3dfd&h=libreoffice-5-4

Resolves: tdf#112680 start color picker with currently selected color

It will be available in 5.4.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.