Resolves: tdf#112680 start color picker with currently selected color

Change-Id: I939a0b88646b4654337505e985cceff883f09343